# rust-template-project

./: .editorconfig  .gitignore  404.html  Cargo.toml  README.md  index.html  print.html
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_form.yml  feature_request.yml
.github/workflows/: ci.yml  gh-pages.yml
benches/: simple-bench.rs
benches/multi-file-bench/: main.rs
book/: book.toml
book/book/: print.html  searchindex.json
book/book/misc/: contributors.html
book/book/user-guide/: basics.html  installation.html
book/src/: SUMMARY.md
docs/: .env  README.md  book.toml
docs/book/: 404.html  index.html  searchindex.js
docs/book/user-guide/: configuration.html
docs/src/: 404.md  README.md  SUMMARY.md
docs/src/user-guide/: installation.md
misc/: contributors.html
src/: lib.rs  main.rs  prelude.rs
user-guide/: basics.html  configuration.html  installation.html
